# quant_system

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.trader  Makefile  PROJECT_EVALUATION.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.lock.txt  research.md  rust_lib.rs
_inactive/: backtest_alpha_v8.py  backtest_engine.py  run_bybit_alpha.py  train_v7_alpha.py
alpha/: __init__.py  adaptive_config.py  auto_retrain.py  auto_retrain_config.py  auto_retrain_helpers.py  auto_retrain_main.py  auto_retrain_multi_tf.py  base.py  dynamic_horizon.py  export_model_to_json.py  horizon_ensemble.py  ic_monitor.py  model_loader.py  model_loader_prod.py  nn_utils.py  online_ridge.py  registry.py  retrain_15m.py  signal_transform.py  strategy_config.py  utils.py  v11_config.py
attribution/: __init__.py  cost.py  live_tracker.py  pnl.py  pnl_tracker.py  report.py  signal_attribution.py  tracker.py
common_rust/: linalg_math.rs  market_maker.rs  market_maker_hedge.inc.rs  portfolio_allocate_fn.inc.rs  portfolio_allocator.rs  portfolio_allocator_tests.inc.rs  saga.rs  saga_types.inc.rs
config/: alerts.live.yaml  burnin.paper.yaml  burnin.shadow.yaml  burnin.testnet.yaml  hyperliquid.yaml  polymarket.yaml  production.live.yaml  production.local.yaml  production.yaml
context/: __init__.py  account_state.py  clock.py  constraints.py  context.py  reducer.py  registry.py  snapshot.py  validators.py  versioning.py
core/: __init__.py  bootstrap.py  bus.py  clock.py  config.py  effects.py  errors.py  interceptors.py  observability.py  plugins.py  types.py  validation.py
data/: __init__.py  backup.py  lineage.py  store.py
decision/: README.md  __init__.py  audit.py  backtest_module.py  backtest_module_exit_entry.py  backtest_module_helpers.py  backtest_module_predict.py  composer.py  config.py  context.py  engine.py  ensemble_combiner.py  errors.py  exit_manager.py  explain.py  gating.py  graph.py  hybrid_15m_executor.py  market_access.py  ml_decision.py  multi_strategy.py  precomputed_hook.py  regime_bridge.py  regime_gate.py  regime_policy.py  registry.py  replay.py  selectors.py  types.py  utils.py
deploy/: README.md  grub-trading.cfg  install-lowlatency.sh  sysctl-trading.conf  trading-tune.service  tune-os.sh
docs/: add_new_symbol.md  api.md  deploy_truth.md  deployment-checklist.md  execution_contracts.md  model_governance.md  operations.md  production_runbook.md  runtime_contracts.md  runtime_direction.md  runtime_truth.md  rust_core_rewrite.md  rust_replacement_matrix.md  rust_rewrite_backlog.md  small_capital_growth_plan.md  tick_processor_unification.md  wiring_truth.md
engine/: __init__.py  bootstrap.py  clock.py  config.py  coordinator.py  coordinator_handlers.py  core.py  decision_bridge.py  dispatcher.py  errors.py  execution_bridge.py  feature_hook.py  feature_hook_dominance.py  feature_hook_nan.py  guards.py  interceptors.py  loop.py  metrics.py  module_reloader.py  pipeline.py  replay.py  saga.py  scheduler.py  tick_engine.py  tracing.py
event/: __init__.py  bootstrap.py  bounded_bus.py  bus.py  checkpoint.py  clock.py  codec.py  core_types.py  dispatcher.py  domain.py  errors.py  event.py  events.py  header.py  lifecycle.py  metrics.py  policy.py  replay.py  replay_mux.py  runtime.py  sampler.py  schema.py  security.py  store.py  tick_types.py  trace.py  types.py  validators.py
execution/: __init__.py  algo_adapter.py  order_utils.py  validation.py  venue_manager.py
ext/rust/: Cargo.toml  config.1s-explore.yaml  config.multi-tf.yaml
ext/rust/src/: adaptive_stop.rs  backtest_engine.rs  bootstrap.rs  constraint_pipeline.rs  correlation.rs  cross_asset.rs  cross_sectional.rs  decision_policy.rs  decision_signals.rs  dedup_guard.rs  digest.rs  drawdown_breaker.rs  ensemble_calibrate.rs  event_header.rs  event_types.rs  factor_math.rs  factor_signals.rs  fast_1m_features.rs  fast_rng.rs  feature_engine.rs  incremental_trackers.rs  inference_bridge.rs  json_parse.rs  kernel_boundary.rs  lib.rs  market_maker.rs  micro_alpha.rs  ml_decision.rs  monte_carlo.rs  multi_timeframe.rs  order_state_machine.rs  order_submit.rs  pipeline.rs  pnl_tracker.rs  portfolio_allocator.rs  py_incremental.rs  risk_aggregator.rs  risk_engine.rs  rolling_window.rs  route_match.rs  (+14 more)
features/: __init__.py  _rolling_py.py  batch_backtest.py  batch_cross_asset.py  batch_feature_engine.py  batch_features_data_loaders.py  batch_features_extra.py  cross_asset_computer.py  cross_sectional.py  dominance_computer.py  dynamic_selector.py  enriched_computer.py  enriched_feature_getters.py  enriched_feature_names.py  enriched_features_extended.py  enriched_features_extended_v2.py  enriched_symbol_state.py  enriched_symbol_state_push.py  enriched_trackers.py  feature_catalog.py  funding_spread.py  live_computer.py  live_orderbook_features.py  microstructure_bar.py  multi_resolution.py  multi_timeframe.py  onchain_flow.py  options_flow.py  pipeline.py  rolling.py  store.py  technical.py  types.py
infra/: __init__.py  bootstrap.py  config_loader.py  deploy_logrotate.sh  effects.py  errors.py  logger.py  model_signing.py  observability.py  plugins.py  run_context.py  server_setup.py  sync_systemd.sh  threading_utils.py
models_v8/: README.md
monitoring/: __init__.py  alerts.py  alpha_decay.py  alpha_health.py  checklist.py  compare.py  daily_reconcile.py  daily_reconcile_engine.py  daily_reconcile_report.py  data_quality_alerts.py  data_quality_check.py  decision_audit.py  engine_hook.py  eventlog.py  health.py  health_server.py  ic_decay_cli.py  ic_decay_monitor.py  notify.py  ops_dashboard.py  pipeline_metrics.py  reconcile.py  report.py  rolling_sharpe.py  runtime_health_check.py  security.py  shadow.py  shadow_check.py  signal_decay_analysis.py  slippage.py  slo.py  tracker.py  watchdog.py
platform/: __init__.py  run_context.py
policy/: gating.py
polymarket/: __main__.py  binance_feed.py  collector.py  (+13 more)
(+2071 files in other folders)
