[package]
name = "quant_hotpath"
version = "0.1.0"
edition = "2021"

[features]
default = []
python = ["pyo3/extension-module"]

[lib]
name = "_quant_hotpath"
path = "rust_lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "quant_trader"
path = "rust_bin/main.rs"

[dependencies]
pyo3 = { version = "0.23", features = ["multiple-pymethods"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }
getrandom = { version = "0.3", features = ["std"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "signal"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
native-tls = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
futures-util = "0.3"
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
