[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant-system"
version = "0.2.0"
description = "Event-driven quantitative trading system for crypto perpetual futures"
requires-python = ">=3.11"
license = {text = "Proprietary"}

# Zero external dependencies for core logic — only stdlib.
# Optional groups below add functionality for specific environments.
dependencies = []

[project.optional-dependencies]
live = [
    "websocket-client>=1.6",
    "python-dotenv>=1.0",
]
config = [
    "pyyaml>=6.0",
]
data = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14.0",
]
research = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "yfinance>=0.2.31",
    "ccxt>=4.0",
    "matplotlib>=3.8",
]
ml = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.1",
]
dl = [
    "torch>=2.1",
    "transformers>=4.36",
]
monitoring = [
    "prometheus-client>=0.19",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "hypothesis>=6.92",
    "pybind11>=2.12",
]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.1",
    "hypothesis>=6.92",
]

[tool.pytest.ini_options]
testpaths = ["tests", "tests_unit"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-q --tb=short"
markers = [
    "benchmark: performance benchmark tests (deselect with '-m \"not benchmark\"')",
]

[tool.coverage.run]
source = ["alpha", "core", "data", "decision", "engine", "event",
          "execution", "features", "infra", "monitoring", "policy",
          "portfolio", "regime", "risk", "runner", "state", "strategies"]
omit = ["*/tests/*", "*/tests_unit/*", "scripts/*", "ext/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 57
exclude_lines = ["pragma: no cover", "if __name__", "raise NotImplementedError"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # gradual adoption
