[package]
name = "quant_hotpath"
version = "0.1.0"
edition = "2021"

[lib]
name = "_quant_hotpath"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }
getrandom = { version = "0.3", features = ["std"] }
