[package]
name = "quant_hotpath"
version = "0.1.0"
edition = "2021"

[lib]
name = "_quant_hotpath"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }
getrandom = { version = "0.3", features = ["std"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
